# blazebooru

backend/: Cargo.toml
backend/blazebooru/: Cargo.toml
backend/blazebooru/src/: auth.rs  deserialize.rs  main.rs
backend/blazebooru/src/command/: server.rs
backend/blazebooru/src/server/: mod.rs
backend/blazebooru/src/server/api/: auth.rs  mod.rs  post.rs  tag.rs  user.rs  wiki.rs
backend/common/: Cargo.toml
backend/core/: Cargo.toml
backend/core/src/: file.rs  lib.rs  post.rs  user.rs  wiki.rs
backend/core/src/util/: image.rs  mod.rs
backend/core/src/util/thumbnail/: anim_thumbnail.rs  mod.rs
backend/export/: Cargo.toml
backend/import/: Cargo.toml
backend/models/: Cargo.toml
backend/models/src/: local.rs  view.rs
backend/store/: Cargo.toml
backend/store/.sqlx/: query-9c9eb87646d415da01e0d80a81c6d333f4e9a88fcbbdf900df54e108b9e00a84.json
backend/store/migrations/: 20250417160148_fix_calculate_last_page_failing_on_full_last_page.sql  20251011130716_rename_users_table.sql  20251017202313_user_updating.sql  20251019101736_add_wiki.sql  20260111220407_post_hash_index.sql
backend/store/sql/functions/: can_user_edit_post.sql  can_user_edit_tag.sql  create_post_comment.sql  create_user.sql  create_wiki.sql  delete_user.sql  delete_wiki.sql  update_user.sql  update_wiki.sql
backend/store/sql/tables/: comment.sql  post.sql  user.sql  wiki_pages.sql  wiki_pages_history.sql
backend/store/sql/types/: new_wiki.sql  update_user.sql  update_wiki.sql
backend/store/sql/views/: view_post.sql  view_wiki.sql
backend/store/src/: models.rs  transform.rs
backend/store/src/store/: auth.rs  comment.rs  mod.rs  post.rs  tag.rs  user.rs  wiki.rs
frontend/: biome.json  index.html  package.json  pnpm-lock.yaml  rsbuild.config.ts
frontend/src/: index.ts
frontend/src/components/: MainLayout.vue
frontend/src/components/comment/: CommentText.vue  PostComment.vue
frontend/src/components/common/: Image.vue  MarkdownEditor.vue
frontend/src/components/login/: LoginForm.vue  RegisterForm.vue
frontend/src/components/post/: PostInfo.vue  Posts.vue
frontend/src/components/tag/: TagEntry.vue
frontend/src/components/upload/: UploadForm.vue  UploadProgress.vue
frontend/src/components/user/: UserInfo.vue  UserLink.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  main.ts  post.ts  tags.ts  upload.ts  wiki.ts
frontend/src/styles/: base.scss  main.scss
frontend/src/utils/: detect-navback.ts
frontend/src/views/: BrowseView.vue  PostView.vue  TagsView.vue  UploadProgressView.vue  UploadView.vue  UserListView.vue  UserView.vue  WikiListView.vue  WikiView.vue
(+6 files in other folders)
