[workspace]
resolver = "2"

members = [
  "blazebooru",
  "common",
  "core",
  "export",
  "import",
  "models",
  "store",
]

default-members = [
  "blazebooru",
  "common",
  "core",
]

[workspace.dependencies]
anyhow = "1.0.98"
argon2 = "0.5.3"
axum = "0.8.4"
axum-client-ip = "1.1.3"
axum-extra = "0.10.1"
blake3 = "1.8.2"
bytes = "1.10.1"
chrono = "0.4.41"
clap = "4.5.41"
dirs = "6.0.0"
dotenv = "0.15.0"
futures = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
image = "0.25.6"
jsonwebtoken = "9.3.1"
once_cell = "1.21.3"
regex = "1.11.1"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.141"
sqlx = "0.8.6"
thiserror = "2.0.12"
tokio = "1.46.1"
tokio-util = "0.7.15"
toml = "0.9.2"
tower-http = "0.6.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.17.0"
