[workspace]
resolver = "2"

members = [
  "blazebooru",
  "common",
  "core",
  "export",
  "import",
  "models",
  "store",
]

default-members = [
  "blazebooru",
  "common",
  "core",
]

[workspace.dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
axum = "0.8.6"
axum-client-ip = "1.1.3"
axum-extra = "0.10.3"
blake3 = "1.8.2"
bytes = "1.10.1"
chrono = "0.4.42"
clap = "4.5.49"
dirs = "6.0.0"
futures = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
image = "0.25.8"
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
once_cell = "1.21.3"
regex = "1.12.2"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
sqlx = "0.8.6"
thiserror = "2.0.17"
tokio = "1.48.0"
tokio-util = "0.7.16"
toml = "0.9.8"
tower-http = "0.6.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = "1.18.1"
