[workspace]
resolver = "2"

members = [
  "blazebooru",
  "common",
  "core",
  "export",
  "import",
  "models",
  "store",
]

default-members = [
  "blazebooru",
  "common",
  "core",
]

[workspace.dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
axum = "0.8.8"
axum-client-ip = "1.1.3"
axum-extra = "0.12.5"
blake3 = "1.8.3"
bytes = "1.11.0"
chrono = "0.4.42"
clap = "4.5.54"
dirs = "6.0.0"
dotenv = "0.15.0"
futures = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
image = "0.25.9"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
once_cell = "1.21.3"
regex = "1.12.2"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.149"
sqlx = "0.8.6"
thiserror = "2.0.17"
tokio = "1.49.0"
tokio-util = "0.7.18"
toml = "0.9.8"
tower-http = "0.6.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = "1.19.0"
